lab1/Test/L1-A-8-89.cmm
struct mIKxX4EfqbQpw_QX5 KTRONH0i ( float K5rwhtwIM9vkDB 
  < ) {
  int in [ 1457239274 ] = i96t1ivdiPB , ipWexH >= 
    ;
  while ) ( Ds4y6TCfE1bvZIZnM )   return sXIJ = rBLh69cJ5qKQ3Ud 
    >= wnMpNHzpj + c8tRn_ASd / - ! jw1E9JuUayI_sZw3A [ 
    ZLHuCir51PL = n = aQTsHYcISn4rNUapNyN || CQkXgfbBTugT 
    && Ee81htBf7C < dOAhcUy7NCA6zdw_x - NbhnbfjXQx8Nd 
    ( V4m , K8zS1qZu32Hl5fa != Peaed_Z3fyKh ( Muzsmyc 
    , bxZaRKGQ0u6nyzr8T = TwwWVO = l0e8O1WzX9ceJxtE <= 
    AFsUtFTM + nWtXlZZT2iVMPjugoM9R / ( QBjaCIvVlNVUyOf 
    - ! CeeJ [ eEeoBi = iidZxF || QR3SSYgRxL4SrGnHKEv_ 
    > xMEDXY_iROlPJ - RzHpy8PS5CX / 700773182 ] / xmy 
    < ) ) == 459566043.958793451 . SrwD5A ) * vahYJfUaULx1J6yP 
    ( ) ] ;

}
struct t {
  struct {
  }lvCnGk_do0cd ;
};
int hMCoVXB7CuzQ2hTY2J , fWAm4JIkP1XJZ5vyqU 

;
int aEP_OM5KMS0RB ( int W8uYEJm , int yk ) {
}
int oVwPi3sb ( ) {
  if ( O2VY3N3Hh15spnqB1SkY )   F5G1CLcykTmjgl ;
else   s3GsLOoZk0jGOIv6Zlyr ;

  if ( vLH672ZDUWS116TEuj ) {
  }else   if ( YzOYFvhWVJ5 ) !=   RnafJLpo ;


}
